[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-research-video-toolkit"
version = "0.1.0"
description = "Blender Video Sequencer one-click filters and restoration tools by Open Research Tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "Open Research Tools" }
]
keywords = ["blender", "video", "ffmpeg", "restoration", "vse"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Video",
]

[project.scripts]
video-toolkit = "video_toolkit.cli:main"

[tool.setuptools.packages.find]
include = ["video_toolkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
